fix overflow in sign in/sign up

--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -1,7 +1,11 @@
 .sign-in-form {
     width: 100%;
-    padding: 10vw;
-    margin: auto;
+    padding: 20%;
+    max-height: 100vh;
+}
+
+.sign-in-row {
+    display: flex;
 }
 
 .logo-sign {
@@ -14,4 +18,8 @@
     font-size: 2vw;
     margin-left: 10px;
     margin-bottom: 5px;
+}
+
+.card {
+    overflow: auto;
 }
